# raylib_sandbox

./: .gitignore  CMakeLists.txt  Cake.toml  README.md  compile_commands.json
include/: game.h  voronoi.h
include/ecs/: component.h  entity.h  registry.h  system.h  world.h
include/ecs/components/: keyinput.h  sprite.h  text.h  transform.h
include/ecs/systems/: movement.h  sprite.h  text.h  transform.h
include/standalone/: rope.h  voronoi.h
src/: CMakeLists.txt  game.cc  sandbox.cc
src/ecs/: CMakeLists.txt  world.cc
test/: CMakeLists.txt  test_gtest.cc  test_rope.cc  test_voronoi.cc
